--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ html {
 
 body {
   background: #ffffff;
-  color: #0026ff;
+  color: #000000;
   font-family: "PT Sans", -apple-system, "Helvetica Neue", "Segoe UI", "Roboto", sans-serif;
   font-weight: 400;
   line-height: 1.6;
