--- a/css/index.css
+++ b/css/index.css
@@ -131,7 +131,7 @@ body > header, body > footer {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  background: #001eff;
+  background: #000000;
   color: #ffffff;
 }
 
@@ -158,9 +158,9 @@ nav a {
 
 @media (prefers-color-scheme: dark) {
   html, body, body > header, body > footer {
-    background: #0026ff;
+    background: #000000;
     color: #ffffff;
-    box-shadow: 0 0 0 1px #002fff;
+    box-shadow: 0 0 0 1px #000000;
   }
 }
 
@@ -202,7 +202,7 @@ nav a {
 }
 
 .highlight pre {
-  background: rgba(0, 26, 255, 0.9)!important;
+  background: #000000!important;
   color: white!important;
 }
 
